--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "name": "my-webpack-project",
   "scripts": {
     "start": "webpack serve --mode development --hot",
-    "build": "npx webpack --mode production",
-    "lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix ./",
-    "loki:update": "npm run build-storybook && npx loki update --requireReference --reactUri file:./storybook-static",
-    "loki:approve": "npx loki approve",
-    "test:loki": "npm run build-storybook && npx loki --requireReference --reactUri file:./storybook-static",
-    "test": "npx jest",
-    "e2e": "npx jest -c jest.e2e.config.js e2e",
+    "build": "webpack --mode production",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix ./",
+    "loki:update": "npm run build-storybook && loki update --requireReference --reactUri file:./storybook-static",
+    "loki:approve": "loki approve",
+    "test:loki": "npm run build-storybook && loki --requireReference --reactUri file:./storybook-static",
+    "test": "jest",
+    "e2e": "jest -c jest.e2e.config.js e2e",
     "check": "npm run lint && npm run ts:check && npm test -- --coverage && npm run e2e",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
